--- a/src/Store.UI/Pages/Index.cshtml
+++ b/src/Store.UI/Pages/Index.cshtml
@@ -3,8 +3,23 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<div>
+    <form method="post">
+        <label>Name</label>
+        <input asp-for="Product.Name"/>
+        <label>Description</label>
+        <input asp-for="Product.Description"/>
+        <input type="submit" value="Save Product" />
+    </form>
+</div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+    @{
+        foreach(var product in Model.Products)
+        {
+            <p>
+                @product.Name - @product.Description
+            </p>
+        }
+    }
 </div>
